vuejs/vuejs-tests/testData/ts_ls_highlighting/SimpleVueScriptChanges/test_js.vue
<template><div></div></template>
<script lang="js">
    declare<error descr="Expecting newline or semicolon"> </error>var React;
    export let a:<error descr="Types are not supported by current JavaScript version">string</error> = 1;

    function test() {
       return <div>Hello</div>
    }
</script>